static/data_page.css
main.data-page {
  max-width: var(--max-two-col-width);

  h1 {
    line-height: 1.2;
  }

  .metadata {
    padding: 1em 0;
    font-size: large;
    line-height: 2;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    display: grid;
    column-gap: 1em;
    grid-template-columns: max-content;

    dt {
      font-weight: bold;
      color: var(--heading-color);
    }

    dd {
      margin: 0;
      grid-column-start: 2;
    }
  }

  p {
    margin: 2em 0;
    line-height: 1.7;
  }

  article::first-letter {
    -webkit-initial-letter: 6;
    initial-letter: 6;
    color: var(--highlight-color);
  }

  .bibliography {
    font-size: smaller;
    p {
      margin: 1em 0;
      text-indent: 3em hanging;
    }
  }
}

#dataview {
  overflow-x: scroll;

  .paginate {
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    justify-content: space-between;
    font-size: 1em;
    overflow: hidden;

    :first-child {
      padding-left: 1em;
    }
  }

  .paginate-btns {
    > * {
      padding: 0 0.8em;
      margin: 0 0.2em;
    }

    a {
      text-decoration: none;
      transition: all 0.2s;
    }

    a:hover {
      text-decoration: none;
      color: white;
      background-color: var(--highlight-color);
      box-shadow: 0 0 0 0.2em var(--highlight-color);
      border-radius: 1px;
    }
  }

  input[type="search"] {
    outline: none;
    border: none;
    border-bottom: 1px solid var(--foreground-color);
    box-sizing: border-box;
    width: 100%;
    margin: 0 0 2em 0;
    font-size: 0.8em;
  }

  table {
    min-width: 100%;
    text-align: left;
    border-collapse: collapse;
  }

  tr:hover {
    background-color: #f2f2f2;
  }

  th,
  td {
    padding: 2px 1em;
    border: 1px solid #e5e4e2;
    white-space: nowrap;
  }

  a {
    text-decoration: none;
  }

  a:hover {
    text-decoration: underline;
  }

  p {
    font-size: smaller;
  }
}

/* || RESPONSIVE DESIGN */
@media (max-width: 900px) {
  main.data-page {
    h1 {
      font-size: 2em;
    }

    .metadata {
      font-size: 1em;
    }

    article::first-letter {
      -webkit-initial-letter: 4;
      initial-letter: 4;
    }
  }
}

